# pAInt-by-the-numbers

./: .gitignore  README.md  api_testing.ipynb  data_exploration.ipynb  model_exploration.ipynb
src/: README.md  app.py  next.config.ts  package.json
src/api/: Dockerfile  pyproject.toml
src/api/pbn/: app.py  utils.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ImageDropzone.tsx  PBNConfiguration.tsx  PBNForm.tsx  action.ts
src/components/bits/: ShinyText.tsx
