[project]
name = "paint-by-the-numbers"
version = "0.1.0"
description = "API for web app to transform images into PBN style"
authors = [
    {name = "Minimartzz",email = "martin.ho.zy97@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "pycolornames (>=1.1.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.2.1"

